lspclient: only allow symbol view header toggle sort when applicable

See issue #44
BUG: 447653